--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
     <h1>calculadora</h1>
     <p id="resultado">resultado</p>
     <table>
-        
+     <tr>
+      <td><button class="botao">C</button></td>
+      <td><button class="botao"><</button></td>
+      <td><button class="botao">/</button>/</td>
+      <td><button class="botao">x</button></td>
+     </tr>
+  <tr>
+      <td><button class="botao">7</button></td>
+      <td><button class="botao">8</button></td>
+      <td><button class="botao">9</button></td>
+      <td><button class="botao">-</button></td>
+  </tr>
+     <tr>
+     <td><button class="botao">4</button></td>
+     <td><button class="botao">5</button></td>
+     <td><button class="botao">6</button></td>
+     <td><button class="botao">+</button></td>
+  </tr>
+  <tr>
+    <td><button class="botao">1</button></td>
+    <td><button class="botao ">2</button></td>
+    <td><button class="botao">3</button></td>
+    <td rowspan="2"><button class="botao" style="height: 106px;"></button></td>
+  </tr> 
     </table>
   </div>
 </body>
