--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <td><button class="botao">1</button></td>
     <td><button class="botao ">2</button></td>
     <td><button class="botao">3</button></td>
-    <td rowspan="2"><button class="botao" style="height: 106px;"></button></td>
+    <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
   </tr> 
     </table>
   </div>
