--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p id="resultado"></p>
                 <table>
                     <tr>
-                        <td><button class="botao">C</button></td>
+                        <td><button class="botao" onclick="clean()">C</button></td>
                         <td><button class="botao"><</button></td>
                         <td><button class="botao" onclick="insert('/')">/</button></td>
                         <td><button class="botao" onclick="insert('X')">X</button></td>
@@ -40,7 +40,7 @@
                         <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button class="botao" style="width: 106px;">0</button></td>
+                        <td colspan="2"><button class="botao" style="width: 106px;"onclick="insert('0')">0</button></td>
                         <td><button class="botao" onclick="insert('.')">.</button></td>
                     </tr>
                 </table>
@@ -74,4 +74,4 @@
             }
         </script>
     </body>
-</html>xxc
+</html>
