--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <table>
                     <tr>
                         <td><button class="botao" onclick="clean()">C</button></td>
-                        <td><button class="botao"><</button></td>
+                        <td><button class="botao" onclick="back()"><</button></td>
                         <td><button class="botao" onclick="insert('/')">/</button></td>
-                        <td><button class="botao" onclick="insert('X')">X</button></td>
+                        <td><button class="botao" onclick="insert('*')">X</button></td>
                     </tr>
                     <tr>
                         <td><button class="botao" onclick="insert('7')">7</button></td>
@@ -37,7 +37,7 @@
                         <td><button class="botao" onclick="insert('1')">1</button></td>
                         <td><button class="botao" onclick="insert('2')">2</button></td>
                         <td><button class="botao" onclick="insert('3')">3</button></td>
-                        <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
+                        <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
                     </tr>
                     <tr>
                         <td colspan="2"><button class="botao" style="width: 106px;"onclick="insert('0')">0</button></td>
@@ -56,20 +56,22 @@
             {
                 document.getElementById('resultado').innerHTML="";
             }
-            function back ()
+            function back()
             {
                 var resultado = document.getElementById('resultado').innerHTML;
-                document.getElementById('reultado').innerHTML=resultado.substring (0, resultado.length-1);
+                document.getElementById('resultado').innerHTML= resultado.substring(0, resultado.length -1);
             }
-            function calcular ()
+            function calcular()
             {
                 var resultado = document.getElementById('resultado').innerHTML;
                 if (resultado)
                 {
-                    document.getElementById('resultado').innerHTML = eval(resultado)
+                    document.getElementById('resultado').innerHTML = eval(resultado);
+           
                 }
+                else
                 {
-                    document.getElementById('resultado').innerHTML = "Nada para Calcular"
+                    document.getElementById('resultado').innerHTML = "Nada para calcular";
                 }
             }
         </script>
